--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -71,3 +73,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+*,*::before,*::after{
+  margin: 0;
+  padding:0;
+  }
